--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": "^8.0",
         "ext-json": "*",
         "bristol-su/support": "^5.0.0",
-        "bristol-su/control": "^3.0.1"
+        "bristol-su/control": "^3.0.1",
+        "aws/aws-sdk-php": "^3.200"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
@@ -38,7 +39,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "BristolSU\\Tests\\Mail\\": "tests/"
+            "BristolSU\\Tests\\Mail\\": "tests/",
+            "BristolSU\\Database\\Mail\\Factories\\": "database/factories"
         }
     }
 }
