--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "ext-json": "*",
         "bristol-su/support": "^5.0.0",
         "bristol-su/control": "^3.0.1",
-        "aws/aws-sdk-php": "^3.200"
+        "aws/aws-sdk-php": "^3.200",
+        "ext-fileinfo": "*"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
